# sales-performance-analysis

./: .gitignore  AGENTS.md  CLAUDE.md  MCP_SERVER_README.md  README.md  app.py  forms.py  implementation_guide.md  init_db.py  install.ps1  main.py  models.py  package_project.ps1  pyproject.toml  requirements-mcp.txt  sales_mcp_server.py  test_mcp_server.py  web_interface.md  web_routes.py
docs/: implementation_plan_authentication.md
docs/plans/: 2026-01-27-mcp-server.md  2026-01-30-web-upload-interface.md  2026-02-01-auth-web-design.md  2026-02-01-authentication-implementation.md
input/: raw_data_251104.xlsx
output/: result_251104.xlsx  result_260131.xlsx
static/: style.css
templates/: admin_delete_user.html  admin_reset_password.html  admin_user_form.html  admin_users.html  base.html  error.html  list_results.html  login.html  profile.html  results.html  upload.html  view_result.html
tests/: test_web_interface.py
