[project]
name = "sales-performance-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0b1",
    "openpyxl>=3.1.2,<4.0.0",
    "flask>=3.0.0",
    "flask-login>=0.6.0",
    "flask-bcrypt>=1.0.0",
    "flask-wtf>=1.0.0",
    "flask-sqlalchemy>=3.0.0",
    "sqlalchemy>=2.0.0",
]
